Metrics Start
- The start of returning metrics around Loadouts but they aren't correct yet.
