# api/openapi.json
@@ -1098,6 +1098,61 @@
           }
         }
       }
+    },
+    "/metrics/top-loadouts": {
+      "get": {
+        "operationId": "GetTopLoadouts",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "characterId",
+            "x-go-name": "characterID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "userId",
+            "x-go-name": "userID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return the top snapshots for a user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "required": [
+                    "items",
+                    "count"
+                  ],
+                  "type": "object",
+                  "properties": {
+                    "items": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/CharacterSnapshot"
+                      }
+                    },
+                    "count": {
+                      "type": "object",
+                      "additionalProperties": {
+                        "type": "integer"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
